# advent_of_code_rust_2024

./: .gitignore  Cargo.toml  README.md  get_input_output.sh  hide_input.sh  mk_bench.sh  show_input.sh
.github/workflows/: codspeed.yml
benches/: bench.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
input/2024/: day1.output.1.txt.gpg  day1.output.2.txt.gpg  day1.txt.gpg  day10.output.1.txt.gpg  day10.output.2.txt.gpg  day10.txt.gpg  day11.output.1.txt.gpg  day11.output.2.txt.gpg  day11.txt.gpg  day12.output.1.txt.gpg  day12.output.2.txt.gpg  day12.txt.gpg  day13.output.1.txt.gpg  day13.output.2.txt.gpg  day13.txt.gpg  day14.output.1.txt.gpg  day14.output.2.txt.gpg  day14.txt.gpg  day15.output.1.txt.gpg  day15.output.2.txt.gpg  day15.txt.gpg  day16.output.1.txt.gpg  day16.output.2.txt.gpg  day16.txt.gpg  day17.output.1.txt.gpg  day17.output.2.txt.gpg  day17.txt.gpg  day18.output.1.txt.gpg  day18.output.2.txt.gpg  day18.txt.gpg  day19.output.1.txt.gpg  day19.output.2.txt.gpg  day19.txt.gpg  day2.output.1.txt.gpg  day2.output.2.txt.gpg  day2.txt.gpg  day20.output.1.txt.gpg  day20.output.2.txt.gpg  day20.txt.gpg  day21.output.1.txt.gpg  (+26 more)
src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day21.rs  day22.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.nicetry.rs  day9.rs  lib.rs  main.rs
src/day12/: grid.rs
src/day12/grid/: cell.rs  heading.rs  iterator.rs  pos.rs
src/day12/grid/cell/: corner.rs
src/day12/grid/cell/corner/: segment.rs  side.rs
src/day12/grid/pos/: delta_pos.rs  grid_pos.rs
templates/: cargo_bench.toml  day.rs
