[package]
name = "advent_of_code_rust_2024"
version = "0.1.0"
edition = "2021"

[dependencies]
ansi_term = "0.12.1"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
regex = "1.11.1"

[dev-dependencies]
criterion = { version = "2.7.2", package = "codspeed-criterion-compat" }

[[bench]]
harness = false
name = "day1"
[[bench]]
harness = false
name = "day2"
[[bench]]
harness = false
name = "day3"
[[bench]]
harness = false
name = "day4"
[[bench]]
harness = false
name = "day5"
[[bench]]
harness = false
name = "day6"
[[bench]]
harness = false
name = "day7"
[[bench]]
harness = false
name = "day8"
[[bench]]
harness = false
name = "day9"
[[bench]]
harness = false
name = "day10"
[[bench]]
harness = false
name = "day11"
[[bench]]
harness = false
name = "day12"
[[bench]]
harness = false
name = "day13"
[[bench]]
harness = false
name = "day14"
[[bench]]
harness = false
name = "day15"
[[bench]]
harness = false
name = "day16"
[[bench]]
harness = false
name = "day17"
[[bench]]
harness = false
name = "day18"
[[bench]]
harness = false
name = "day19"
# [[bench]]
# harness = false
# name = "day20"
[[bench]]
harness = false
name = "day21"
[[bench]]
harness = false
name = "day22"
